# boilerplate-fastapi-server

./: docker-compose.yaml  main.py  pyproject.toml  vestirbackend.Dockerfile
api/v1/routers/: __init__.py  configurations.py
core/: config.py
migrations/: env.py
schemas/: configurations.py
