[tool.poetry]
name = "vestir-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.1"}
torch = "^2.4.0"
transformers = "^4.44.0"
accelerate = "^0.33.0"
alembic = "^1.13.2"
sqlalchemy = "^2.0.32"
uuid-v9 = "^0.1.1"
pydantic-settings = "^2.4.0"
sqlalchemy-utils = "^0.41.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
